--- a/maketflex.html
+++ b/maketflex.html
@@ -10,27 +10,7 @@
     <link rel="stylesheet" href="/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
     <style>
-        .head {
 
-            background: bisque;
-            text-align: left;
-            margin: 0px;
-            display: inline-flexbox;
-            flex-direction: column;
-
-        }
-
-        .mainmenu {
-            text-decoration: none;
-            color: olive;
-            padding: 5px;
-        }
-
-        .lang {
-            text-align: end;
-
-
-        }
     </style>
 </head>
 
@@ -49,10 +29,13 @@
 
                 </div>
                 <div class="trolley">
-                    <a class="mainmenu" href=''><img src="/assets/trolley.png"></a>
-
+                    <a class="mainmenu" href=''><img src="/assets/trolley.png" alt="корзина"></a>
                 </div>
+
             </nav>
+
+        </div>
+
     </header>
 
     <div style="background-image: url(assets/tarah-dane-kUSusBBthW0-unsplash.jpg);">
@@ -75,7 +58,7 @@
     </div>
 
 
-    </div>
+
 
     <footer class="downmenu">
         <a class="mainmenu" href=''>Our products</a>| <a class="mainmenu" href=''>Our mission</a>| <a class="mainmenu"
